feat: [NUTR-118] - refactor signup controller and service
