# swagger-output.json
@@ -46,77 +46,6 @@
     "application/json"
   ],
   "paths": {
-    "/auth/signUp": {
-      "post": {
-        "tags": [
-          "Auth"
-        ],
-        "summary": "Register user and returns a JWT token",
-        "description": "Endpoint to sign up",
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "description": "Information about user to sign up",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/TUserCreate"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "schema": {
-              "$ref": "#/definitions/TUserResponse"
-            },
-            "description": "User logged successfully."
-          },
-          "400": {
-            "schema": {
-              "$ref": "#/definitions/ErrorFieldResponse"
-            },
-            "description": "Email already in use"
-          }
-        }
-      }
-    },
-    "/auth/signIn": {
-      "post": {
-        "tags": [
-          "Auth"
-        ],
-        "summary": "Logs in a user and returns a JWT token",
-        "description": "Endpoint to sign in",
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "description": "Credentials to sign in",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/TUser"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "schema": {
-              "$ref": "#/definitions/TUserResponse"
-            },
-            "description": "User logged successfully."
-          },
-          "400": {
-            "schema": {
-              "$ref": "#/definitions/ErrorFieldResponse"
-            },
-            "description": "Missing fields or invalid fields."
-          },
-          "404": {
-            "description": "User not exists"
-          }
-        }
-      }
-    },
     "/patient/create": {
       "post": {
         "tags": [
